Kubernets/confimapPod.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    app.kubernetes.io/name: myapp
spec:
  containers:
   - name: myapp
     image: alpine
     command: ["sleep", "3600"]
     volumeMounts:
      - name: config-volume
        mountPath: "/config"
        readOnly: true
  volumes:
    - name: config-volume
      configMap:
        name: game-demo
        items:
          - key: game.properties
            path: game.properties
