Kubernets/confimappodenv.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    app.kubernetes.io/name: myapp-pod
spec:
  containers:
  - name: myapp
    image: busybox:latest
    command: ['/bin/sh', '-c', 'printenv']
