Kubernets/emptyredispod.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    app.kubernetes.io/name: myapp
spec:
  containers:
  - name: myapp
    image: redis:alpine
    command: 
     - redis-server
     - "/redis-master/redis.conf"
    resources:
      limits:
        cpu: "0.1"
    ports:
      - containerPort: 6379
    volumeMounts:
      - name: redis-data
        mountPath: /data
      - name: redis-config
        mountPath: /redis-master
  volumes:
    - name: redis-data
      emptyDir: {}
    - name: redis-config
      configMap:
        name: empty-config
        items:
         - key: redis-config
           path: redis.conf
