Kubernets/podvolume.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    app.kubernetes.io/name: myapp
spec:
  containers:
  - name: myapp
    image: nginx
    ports:
      - containerPort: 80
    volumeMounts:
      - name: myapp-volume
        mountPath: "/usr/share/nginx/html"
  volumes:
    - name: myapp-volume
      persistentVolumeClaim:
        claimName: task-pv-claim
