Kubernets/secretvolumepod.yml
apiVersion: v1
kind: Pod
metadata:
  name: secretapp
  labels:
    app.kubernetes.io/name: dotfile-test-container
spec:
  containers:
  - name: dotfile-test-container
    image: registry.k8s.io/busybox
    command:
     - ls
     - "-l"
     - "/etc/secret-volume"
    volumeMounts:
    - name: secret-volume
      mountPath: "/etc/secret-volume"
      readOnly: true  
  volumes:
  - name: secret-volume
    secret:
      secretName: mysecret
